test/field/set_on_nil.lox
null.foo = "value" // error: only instances have fields
